@@ -1,6 +1,6 @@
 [package]
 name = "sandbox_utils"
-version = "1.0.0"
+version = "1.1.0"
 edition = "2024"
 
 [features]
