@@ -1,3 +1,6 @@
+Sat Feb 28 13:58:42 -03 2026:
+    - refactory tests
+    - add macro tools
 Thu Feb 26 16:02:16 -03 2026:
     - upload version 1.0
     - default init utils
